compilação do instalador e entregaveis